force-app/main/default/objects/Account/fields/Apellidos__c.field-meta.xml
<CustomField>
    <fullName>Apellidos__c</fullName>
    <formula>ContactoTitular__r.Apellidos__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Apellidos</label>
    <type>Text</type>
</CustomField>