force-app/main/default/objects/Account/fields/ContactoTitular__c.field-meta.xml
<CustomField>
    <fullName>ContactoTitular__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto Titular</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>