force-app/main/default/objects/Account/fields/Metodo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Metodo_contacto__c</fullName>
    <formula>TEXT(ContactoTitular__r.Metodo_contacto__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Método de contacto</label>
    <type>Text</type>
</CustomField>