force-app/main/default/objects/Account/fields/NIF__c.field-meta.xml
<CustomField>
    <fullName>NIF__c</fullName>
    <formula>ContactoTitular__r.NIF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NIF</label>
    <type>Text</type>
</CustomField>