force-app/main/default/objects/Account/validationRules/AccountNameAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNameAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Name), $Profile.Id=&apos;00e09000000G6f5AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo AccountName</errorMessage>
</ValidationRule>