force-app/main/default/objects/Account/validationRules/AccountNameAgenteReclamaciones.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNameAgenteReclamaciones</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Name), $Profile.Id=&apos;00e09000000G6f0AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo AccountName</errorMessage>
</ValidationRule>