force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>NIF__c</columns>
    <columns>Nombre__c</columns>
    <columns>Apellidos__c</columns>
    <columns>Metodo_contacto__c</columns>
    <columns>Telefono__c</columns>
    <columns>Email__c</columns>
    <columns>Direccion__c</columns>
    <columns>ContactoTitular__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los clientes</label>
</ListView>